# capstone-project-amazon-product-intelligence

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
scraping/: scrape-amazon.py
